// Copyright 2015 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blaze;

option java_package = "com.google.devtools.intellij.aspect";

import "proto/common.proto";

message FastBuildBlazeData {
  string label = 1;
  repeated string dependencies = 2;
  string workspace_name = 3;

  repeated Data data = 4;
  AndroidInfo android_info = 5;
  JavaInfo java_info = 6;
  JavaToolchainInfo java_toolchain_info = 7;
}

message Data {
  string label = 1;
  repeated ArtifactLocation artifacts = 2;
}

message AndroidInfo {
  ArtifactLocation aar = 1;
  ArtifactLocation merged_manifest = 2;
}

message JavaInfo {
  repeated ArtifactLocation sources = 1;
  string test_class = 2;
  string test_size = 3;
  repeated string annotation_processor_class_names = 4;
  repeated ArtifactLocation annotation_processor_classpath = 5;
  repeated string jvm_flags = 6;
}

message JavaToolchainInfo {
  ArtifactLocation javac_jar = 1;
  string source_version = 2;
  string target_version = 3;
}
